[workspace]

members = [
    "common",
    "plugin",
    "standalone",
]
resolver = "2"

[workspace.package]
authors = ["David Dunwoody <david@flightlevelchange.co.uk>"]
edition = "2021"
version = "0.2.0"

[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1

[workspace.metadata.release]
publish = false
shared-version = true
tag-prefix = ""
