[package]
name = "hints-common"
authors.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
dcommon = { git = "https://github.com/flightlevelchange/davionics.git", features = ["ui"] }
image = { version = "0.24.7", default-features = false, features = ["jpeg", "png"] }
imgui = { git = "https://github.com/ddunwoody/imgui-rs.git", branch = "0.11-ddunwoody" }
# TODO: split imgui-support into standalone and xplane crates
imgui-support = { git = "https://github.com/flightlevelchange/imgui-support.git", features = ["standalone"] }
serde = { version = "1.0.188", features = ["derive"] }
toml = "0.8.2"
tracing = "0.1.37"
