[package]
name = "hints-common"
authors.workspace = true
edition.workspace = true
version.workspace = true

[features]
standalone = ["dep:imgui-support-standalone"]
xplane = ["dep:imgui-support-xplane"]

[dependencies]
image = { version = "0.24.7", default-features = false, features = ["jpeg", "png"] }
imgui = { git = "https://github.com/ddunwoody/imgui-rs.git", branch = "0.11-ddunwoody" }
imgui-support = { git = "https://github.com/flightlevelchange/imgui-support.git" }
imgui-support-standalone = { git = "https://github.com/flightlevelchange/imgui-support.git", optional = true }
imgui-support-xplane = { git = "https://github.com/flightlevelchange/imgui-support.git", optional = true }
serde = { version = "1.0.188", features = ["derive"] }
thiserror = "1.0.49"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
