[package]
name = "hints-plugin"
version = "0.1.0"
edition = "2021"
authors = ["David Dunwoody <david@flightlevelchange.co.uk>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
dcommon = { git = "https://github.com/flightlevelchange/davionics.git" }
hints = { path = "../hints", features = ["xplane"] }
imgui-support = { git = "https://github.com/flightlevelchange/imgui-support.git", features = ["xplane"] }
tracing = "0.1.37"
xplm = { git = "https://github.com/ddunwoody/rust-xplm.git" }
xplm-ext = { git = "https://github.com/flightlevelchange/davionics.git" }

