[package]
name = "hints"
version = "0.1.0"
edition = "2021"
authors = ["David Dunwoody <david@flightlevelchange.co.uk>"]

[features]
standalone = ["dep:glfw", "imgui-support/standalone", "dep:tracing-subscriber"]
xplane = ["imgui-support/xplane", "dep:xplm", "dep:xplm-ext"]

[dependencies]
cfg-if = "1.0.0"
dcommon = { git = "https://github.com/flightlevelchange/davionics.git" }
gl21 = { git = "https://github.com/ddunwoody/gl21.git" }
glfw = { version = "0.51.0", optional = true }
image = { version = "0.24.7", default-features = false, features = ["jpeg", "png"] }
imgui = { git = "https://github.com/ddunwoody/imgui-rs.git", branch = "0.11-ddunwoody" }
imgui-support = { git = "https://github.com/flightlevelchange/imgui-support.git" }
serde = { version = "1.0.188", features = ["derive"] }
toml = "0.8.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", optional = true, features = ["env-filter"] }
xplm = { git = "https://github.com/ddunwoody/rust-xplm.git", optional = true }
xplm-ext = { git = "https://github.com/flightlevelchange/davionics.git", optional = true }

