[package]
name = "hints-plugin"
authors.workspace = true
edition.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
dcommon = { git = "https://github.com/flightlevelchange/davionics.git" }
hints-common = { path = "../common" }
imgui-support = { git = "https://github.com/flightlevelchange/imgui-support.git", features = ["xplane"] }
tracing = "0.1.37"
xplm = { git = "https://github.com/ddunwoody/rust-xplm.git" }
xplm-ext = { git = "https://github.com/flightlevelchange/davionics.git" }

