[package]
name = "hints-plugin"
authors.workspace = true
edition.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
dcommon = { git = "https://github.com/flightlevelchange/davionics.git" }
hints-common = { path = "../common", features = ["xplane"] }
imgui-support = { git = "https://github.com/flightlevelchange/imgui-support.git" }
imgui-support-xplane = { git = "https://github.com/flightlevelchange/imgui-support.git" }
serde = { version = "1.0.188", features = ["derive"] }
toml = "0.8.2"
tracing = { version = "0.1.37", features = ["release_max_level_info"] }
xplm = { git = "https://github.com/ddunwoody/rust-xplm.git" }
xplm-ext = { git = "https://github.com/flightlevelchange/davionics.git" }
xplm-sys = { git = "https://github.com/ddunwoody/xplm-sys.git" }

