[package]
name = "hints-plugin"
authors.workspace = true
edition.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
hints-common = { path = "../common", features = ["xplane"] }
imgui-support = { git = "https://github.com/ddunwoody/imgui-support.git" }
imgui-support-xplane = { git = "https://github.com/ddunwoody/imgui-support.git" }
serde = { version = "1.0.188", features = ["derive"] }
toml = "0.8.2"
tracing = { version = "0.1.37", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3.17" }
xplm = { git = "https://github.com/ddunwoody/rust-xplm.git" }
xplm-sys = { git = "https://github.com/ddunwoody/xplm-sys.git" }

