[package]
name = "hints-standalone"
authors.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
glfw = "0.51.0"
hints-common = { path = "../common" }
imgui-support = { git = "https://github.com/flightlevelchange/imgui-support.git", features = ["standalone"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

