[package]
name = "hints-standalone"
authors.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
glfw = "0.53.0"
hints-common = { path = "../common", features = ["standalone"] }
imgui-support = { git = "https://github.com/ddunwoody/imgui-support.git" }
imgui-support-standalone = { git = "https://github.com/ddunwoody/imgui-support.git" }
tracing = { version = "0.1.37", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3.17" }

